--- a/index.html
+++ b/index.html
@@ -1,174 +1,214 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="zh-TW">
 <head>
   <meta charset="UTF-8">
   <title>部分工時假期計算器</title>
   <style>
-    body { font-family: "Noto Sans TC", Arial, sans-serif; font-size: 16px; line-height: 1.7; color: #222; margin: 20px; background: #fafafa; }
-    .page { display: none; }
-    .active { display: block; }
-    .step { font-weight: bold; margin-bottom: 10px; color: #007acc; font-size: 18px; }
-    .box { margin:10px 0; padding:10px; background:#f5f7fa; border:1px solid #ccc; border-radius: 6px; }
-    h2 { font-size: 24px; margin-bottom: 15px; color: #004c97; }
-    h3 { font-size: 20px; margin-top: 15px; margin-bottom: 10px; color: #005fa3; }
-    label { display: block; margin: 8px 0; font-size: 15px; }
-    input, select { font-size: 15px; padding: 4px 6px; margin-top: 4px; border: 1px solid #ccc; border-radius: 4px; }
-    .formula { margin-top: 20px; font-size: 14px; color: #444; background: #fdfdfd; border-left: 4px solid #007acc; padding: 12px; line-height: 1.6; }
-    .btn, button { margin-top: 15px; padding: 8px 16px; font-size: 15px; border: none; background: #007acc; color: #fff; cursor: pointer; border-radius: 5px; }
-    .btn:hover, button:hover { background: #005f99; }
+    body {
+      font-family: "Helvetica Neue", Arial, sans-serif;
+      margin: 20px;
+      background-color: #f9fafb;
+      color: #333;
+      line-height: 1.6;
+    }
+    h1 {
+      font-size: 26px;
+      margin-bottom: 20px;
+      color: #0d47a1;
+    }
+    h2 {
+      font-size: 20px;
+      margin-top: 20px;
+      color: #1565c0;
+    }
+    .box {
+      background: #fff;
+      padding: 20px;
+      margin: 15px 0;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    label {
+      display: block;
+      margin: 8px 0 4px;
+      font-weight: 600;
+    }
+    input, select {
+      padding: 6px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      width: 200px;
+    }
+    button {
+      margin-top: 15px;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 6px;
+      background-color: #1976d2;
+      color: #fff;
+      font-size: 15px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #0d47a1;
+    }
+    .result {
+      font-size: 16px;
+      margin-top: 10px;
+    }
+    .formula {
+      background: #eef4fb;
+      padding: 12px;
+      margin-top: 20px;
+      border-radius: 6px;
+      font-family: monospace;
+      white-space: pre-line;
+    }
+    footer {
+      margin-top: 40px;
+      padding: 15px;
+      text-align: center;
+      font-size: 14px;
+      color: #555;
+      border-top: 1px solid #ccc;
+    }
   </style>
 </head>
 <body>
 
-<h2>部分工時假期計算器</h2>
+  <h1>部分工時假期計算器</h1>
 
-<!-- Step 1 -->
-<div id="page1" class="page active">
-  <div class="step">Step 1：選擇要計算的假別</div>
-  <label><input type="checkbox" id="calcVacation"> 特休假</label>
-  <label><input type="checkbox" id="calcMaternity"> 產假</label>
-  <label><input type="checkbox" id="calcMarriage"> 婚假</label>
-  <label><input type="checkbox" id="calcFuneral"> 喪假</label>
-  <label><input type="checkbox" id="calcSick"> 病假</label>
-  <label><input type="checkbox" id="calcPersonal"> 事假</label>
-  <label><input type="checkbox" id="calcPrenatal"> 產檢假</label>
-  <label><input type="checkbox" id="calcPaternity"> 陪產假</label>
-  <label><input type="checkbox" id="calcMenstrual"> 生理假</label>
-  <button onclick="goToPage(2)">下一步</button>
-</div>
-
-<!-- Step 2 -->
-<div id="page2" class="page">
-  <div class="step">Step 2：輸入必要資訊</div>
-
-  <div id="selectedLeaves" class="box">
-    <b>已選假別：</b> <span id="selectedLeavesList"></span>
+  <!-- Step 1 -->
+  <div id="step1" class="box">
+    <h2>Step 1：選擇要計算的假別</h2>
+    <label><input type="checkbox" value="vacation"> 特休假</label>
+    <label><input type="checkbox" value="maternity"> 產假</label>
+    <label><input type="checkbox" value="menstrual"> 生理假</label>
+    <button onclick="goStep2()">下一步</button>
   </div>
 
-  <!-- 共用資訊 -->
-  <h3>共用資訊</h3>
-  <label>到職日：<input type="date" id="startDate"></label>
-  <label><input type="checkbox" id="hasBreak" onchange="toggleBreak()"> 是否有年資中斷</label>
-  <div id="breakFields" style="display:none;">
-    <label>中斷開始日：<input type="date" id="breakStart"></label>
-    <label>中斷結束日：<input type="date" id="breakEnd"></label>
-  </div>
-  <label>平均月工時（不含加班）：<input type="number" id="monthlyHours"></label>
-  <label>平均週工時：<input type="number" id="weeklyHours"></label>
-  <label>時薪（元）：<input type="number" id="hourlyWage"></label>
+  <!-- Step 2 -->
+  <div id="step2" class="box" style="display:none;">
+    <h2>Step 2：輸入必要資訊</h2>
+    <div><strong>已選假別：</strong><span id="selectedLeave"></span></div>
 
-  <!-- 假別專屬欄位 -->
-  <div id="maternityFields" style="display:none;">
-    <h3>產假額外資訊</h3>
-    <label>週工時型態：
-      <select id="weeklyType">
-        <option value="fixed">固定週工時</option>
-        <option value="nonfixed">非固定週工時</option>
-      </select>
-    </label>
-    <label>前6個月總工時（非固定才需要）：<input type="number" id="sixMonthHours"></label>
-  </div>
+    <h3>共用資訊</h3>
+    <label>到職日：<input type="date" id="startDate" value="2024-01-01"></label>
+    <label>平均月工時（不含加班）：<input type="number" id="monthlyHours" value="100"></label>
+    <label>平均週工時：<input type="number" id="weeklyHours" value="25"></label>
+    <label>時薪（元）：<input type="number" id="hourlyWage" value="204"></label>
 
-  <div id="menstrualFields" style="display:none;">
-    <h3>生理假額外資訊</h3>
-    <label>當日班表時數：<input type="number" id="menstrualDayHours"></label>
-  </div>
+    <div id="maternityExtra" style="display:none;">
+      <h3>產假額外資訊</h3>
+      <label>週工時型態：
+        <select id="maternityType">
+          <option value="fixed">固定週工時</option>
+          <option value="variable">非固定週工時</option>
+        </select>
+      </label>
+      <label>前6個月總工時（僅非固定需要）：<input type="number" id="last6MonthsHours" value=""></label>
+    </div>
 
-  <div id="funeralFields" style="display:none;">
-    <h3>喪假額外資訊</h3>
-    <label>親屬關係：
-      <select id="funeralRelation">
-        <option value="8">父母、養父母、繼父母、配偶（8日）</option>
-        <option value="6">祖父母、子女、配偶父母/養父母/繼父母（6日）</option>
-        <option value="3">曾祖父母、兄弟姊妹、配偶祖父母（3日）</option>
-      </select>
-    </label>
+    <div id="menstrualExtra" style="display:none;">
+      <h3>生理假額外資訊</h3>
+      <label>當日班表時數：<input type="number" id="menstrualHours" value="8"></label>
+    </div>
+
+    <button onclick="goStep1()">上一步</button>
+    <button onclick="goStep3()">計算</button>
   </div>
 
-  <button onclick="goToPage(1)">上一步</button>
-  <button onclick="goToPage(3)">計算</button>
-</div>
+  <!-- Step 3 -->
+  <div id="step3" class="box" style="display:none;">
+    <h2>Step 3：計算結果</h2>
+    <div><strong>已選假別：</strong><span id="selectedLeave2"></span></div>
+    <div id="results" class="result"></div>
+    <div id="formulas" class="formula"></div>
+    <button onclick="goStep2()">返回修改</button>
+  </div>
 
-<!-- Step 3 -->
-<div id="page3" class="page">
-  <div class="step">Step 3：計算結果</div>
-  <div id="output"></div>
-  <button class="btn" onclick="copyResult()">複製結果</button><br>
-  <button onclick="goToPage(2)">返回修改</button>
-</div>
+  <footer>
+    水山子研究室 | Email: sarraaagoole@gmail.com | 使用人次: <span id="visitorCount">0</span>
+  </footer>
 
 <script>
-  function goToPage(n) {
-    document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
-    document.getElementById("page"+n).classList.add('active');
-    if (n===2) updateSelectedLeaves();
-    if (n===3) calculate();
+  let selectedLeaves = [];
+
+  // 訪客計數
+  if (localStorage.getItem("visitorCount")) {
+    localStorage.setItem("visitorCount", Number(localStorage.getItem("visitorCount")) + 1);
+  } else {
+    localStorage.setItem("visitorCount", 1);
+  }
+  document.getElementById("visitorCount").innerText = localStorage.getItem("visitorCount");
+
+  function goStep1(){
+    document.getElementById("step1").style.display = "block";
+    document.getElementById("step2").style.display = "none";
+    document.getElementById("step3").style.display = "none";
   }
 
-  function updateSelectedLeaves() {
-    const names = [];
-    if (document.getElementById("calcVacation").checked) names.push("特休假");
-    if (document.getElementById("calcMaternity").checked) names.push("產假");
-    if (document.getElementById("calcMarriage").checked) names.push("婚假");
-    if (document.getElementById("calcFuneral").checked) names.push("喪假");
-    if (document.getElementById("calcSick").checked) names.push("病假");
-    if (document.getElementById("calcPersonal").checked) names.push("事假");
-    if (document.getElementById("calcPrenatal").checked) names.push("產檢假");
-    if (document.getElementById("calcPaternity").checked) names.push("陪產假");
-    if (document.getElementById("calcMenstrual").checked) names.push("生理假");
-    document.getElementById("selectedLeavesList").innerText = names.join("、");
-
-    // 顯示額外資訊
-    document.getElementById("maternityFields").style.display = document.getElementById("calcMaternity").checked ? "block" : "none";
-    document.getElementById("menstrualFields").style.display = document.getElementById("calcMenstrual").checked ? "block" : "none";
-    document.getElementById("funeralFields").style.display = document.getElementById("calcFuneral").checked ? "block" : "none";
+  function goStep2(){
+    selectedLeaves = Array.from(document.querySelectorAll('#step1 input[type=checkbox]:checked')).map(cb => cb.value);
+    if(selectedLeaves.length === 0){
+      alert("請至少選擇一個假別！");
+      return;
+    }
+    document.getElementById("selectedLeave").innerText = selectedLeaves.join("、");
+    document.getElementById("maternityExtra").style.display = selectedLeaves.includes("maternity") ? "block" : "none";
+    document.getElementById("menstrualExtra").style.display = selectedLeaves.includes("menstrual") ? "block" : "none";
+    document.getElementById("step1").style.display = "none";
+    document.getElementById("step2").style.display = "block";
+    document.getElementById("step3").style.display = "none";
   }
 
-  function toggleBreak() {
-    document.getElementById("breakFields").style.display = document.getElementById("hasBreak").checked ? "block" : "none";
-  }
+  function goStep3(){
+    const monthlyHours = parseFloat(document.getElementById("monthlyHours").value);
+    const weeklyHours = parseFloat(document.getElementById("weeklyHours").value);
+    const hourlyWage = parseFloat(document.getElementById("hourlyWage").value);
+    const last6MonthsHours = parseFloat(document.getElementById("last6MonthsHours").value) || 0;
+    const menstrualHours = parseFloat(document.getElementById("menstrualHours").value);
 
-  function formatCurrency(num) {
-    return "NT$" + num.toLocaleString("en-US", {maximumFractionDigits:0});
-  }
+    let output = "";
+    let formulas = "運算公式：\n";
 
-  function copyResult() {
-    const text = document.getElementById("output").innerText;
-    navigator.clipboard.writeText(text).then(() => { alert("已複製到剪貼簿！"); });
-  }
-
-  function calculate() {
-    const output = document.getElementById("output");
-    output.innerHTML = "";
-
-    // 顯示已選假別
-    const selected = document.getElementById("selectedLeavesList").innerText;
-    output.innerHTML += `<div class="box"><b>已選假別：</b> ${selected}</div>`;
-
-    // TODO: 實際計算公式填入，這裡先模擬
-    if (document.getElementById("calcVacation").checked) {
-      output.innerHTML += `<p>特休假：7天 → 32.18 小時，${formatCurrency(6566)}</p>`;
-    }
-    if (document.getElementById("calcMaternity").checked) {
-      output.innerHTML += `<p>產假：56天 → 184.76 小時，${formatCurrency(37691)}</p>`;
-    }
-    if (document.getElementById("calcMenstrual").checked) {
-      output.innerHTML += `<p>生理假：1天 → 5.00 小時，${formatCurrency(510)}（半薪）</p>`;
+    if(selectedLeaves.includes("vacation")){
+      const annualHours = monthlyHours * 12;
+      const vacationDays = 7; // 範例：7天
+      const vacationHours = (annualHours / 2088) * vacationDays * 8;
+      const vacationPay = Math.ceil(vacationHours * hourlyWage);
+      output += `特休假：${vacationDays}天 → ${vacationHours.toFixed(2)} 小時，NT$${vacationPay.toLocaleString()}<br>`;
+      formulas += "特休假時數 = (實際年工時 ÷ 2088) × 特休天數 × 8\n";
+      formulas += "特休假薪資 = 特休時數 × 時薪\n\n";
     }
 
-    // 顯示公式
-    let formulaHTML = "<div class='formula'><b>運算公式：</b><br>";
-    if (document.getElementById("calcVacation").checked) {
-      formulaHTML += "特休假時數 ＝ (實際年工時 ÷ 2088) × 特休天數 × 8<br>特休假薪資 ＝ 特休時數 × 時薪<br><br>";
+    if(selectedLeaves.includes("maternity")){
+      const maternityDays = 56;
+      let maternityHours = 0;
+      if(document.getElementById("maternityType").value === "fixed"){
+        maternityHours = weeklyHours * 8;
+      } else {
+        maternityHours = (last6MonthsHours/26) * 8;
+      }
+      const maternityPay = Math.ceil(maternityHours * hourlyWage);
+      output += `產假：${maternityDays}天 → ${maternityHours.toFixed(2)} 小時，NT$${maternityPay.toLocaleString()}<br>`;
+      formulas += "產假工時 = 固定週工時 × 8週 或 (前6月總工時 ÷ 26) × 8週\n";
+      formulas += "產假薪資 = 產假工時 × 時薪（全薪/半薪依規定）\n\n";
     }
-    if (document.getElementById("calcMaternity").checked) {
-      formulaHTML += "產假工時：固定週工時 或 (前6月總工時 ÷ 26) × (假期天數 ÷ 7)<br>產假薪資：依規定比例發給（全薪/半薪/無給薪）<br><br>";
+
+    if(selectedLeaves.includes("menstrual")){
+      const menstrualPay = Math.ceil(menstrualHours * hourlyWage * 0.5);
+      output += `生理假：1天 → ${menstrualHours.toFixed(2)} 小時，NT$${menstrualPay.toLocaleString()}（半薪）<br>`;
+      formulas += "生理假薪資 = 當日班表時數 × 時薪 × 0.5\n\n";
     }
-    if (document.getElementById("calcMenstrual").checked) {
-      formulaHTML += "生理假薪資 ＝ 當日班表時數 × 時薪 × 0.5<br><br>";
-    }
-    formulaHTML += "</div>";
-    output.innerHTML += formulaHTML;
+
+    document.getElementById("selectedLeave2").innerText = selectedLeaves.join("、");
+    document.getElementById("results").innerHTML = output;
+    document.getElementById("formulas").innerText = formulas;
+
+    document.getElementById("step1").style.display = "none";
+    document.getElementById("step2").style.display = "none";
+    document.getElementById("step3").style.display = "block";
   }
 </script>
 </body>
