--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <label>時薪（元）：<input type="number" id="hourlyWage" value="204"></label>
 
   <div id="maternityExtra" style="display:none;">
-    <h3>產假額外資訊</h3>
+    <h3>產假資訊</h3>
     <label>週工時型態：
       <select id="maternityType">
         <option value="fixed">固定週工時</option>
@@ -127,7 +127,7 @@
   </div>
 
   <div id="menstrualExtra" style="display:none;">
-    <h3>生理假額外資訊</h3>
+    <h3>生理假資訊</h3>
     <label>當日班表時數：<input type="number" id="menstrualHours" value="8"></label>
   </div>
 
@@ -145,7 +145,7 @@
 </div>
 
 <footer>
-  水山子研究室 | Email: sarraaagoole@gmail.com | 使用人次: <span id="visitorCount">0</span>
+  © 水山子研究室 | Email: sarraaagoole@gmail.com | 使用人次: <span id="visitorCount">0</span>
 </footer>
 
 <script>
